--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,6 @@
 spring:
     application:
-        name: kafka-demo
+        name: springboot-graylog-app
 
 server:
     port: 9001
-
-kafka:
-    bootstrap-servers: kafka:29092
-
-kafkademo:
-    outboundTopic : "demo-outbound-topic"
